--- a/frontend/src/app/core/components/edit-colaborator/edit-colaborator.component.html
+++ b/frontend/src/app/core/components/edit-colaborator/edit-colaborator.component.html
@@ -17,7 +17,7 @@
 </mat-dialog-content>
 <mat-dialog-actions class="flex gap-2 float-right">
   <button class="p-2 px-2 bg-custom-teal rounded text-white">Salvar</button>
-  <button class="p-2 px-2 rounded shadow">Cancelar</button>
+  <button mat-dialog-close class="p-2 px-2 rounded shadow">Cancelar</button>
 </mat-dialog-actions>
 </form>
 </div>
