starting coffee details component, make changes on backend to fit the request from form send to assigment user to item

--- a/frontend/src/app/core/components/coffee-day/coffee-details/coffee-details.component.html
+++ b/frontend/src/app/core/components/coffee-day/coffee-details/coffee-details.component.html
@@ -1,1 +1,30 @@
-<p>details</p>
+<div class="w-96">
+  <div class="flex justify-between mb-4">
+    <h1 class="text-2xl font-bold">Relacione um colaborador ao Coffee Day de {{ data?.coffeeDate }}</h1>
+  </div>
+  <form [formGroup]="formAssignment" (ngSubmit)="onSubmit()" class="flex gap-2">
+    <div class="flex gap-2">
+      <mat-form-field class="w-full">
+        <mat-label>Nome do colaborador</mat-label>
+        <mat-select [ngModel]="selectedValue" formControlName="colaboratorId" name="colaborator">
+          @for (colaborator of colaborators; track $index) {
+          <mat-option [value]="colaborator.id">{{
+            colaborator.name
+          }}</mat-option>
+          }
+        </mat-select>
+      </mat-form-field>
+
+      <mat-form-field class="w-full">
+        <mat-label>Item</mat-label>
+        <mat-select multiple [ngModel]="selectedValue" formControlName="itemOptionId" name="item">
+          @for (item of items; track $index) {
+          <mat-option [value]="item.id">{{ item.item }}</mat-option>
+          }
+        </mat-select>
+      </mat-form-field>
+
+      <button type="submit" class="p-2 px-2 bg-custom-teal rounded text-white">Salvar</button>
+    </div>
+  </form>
+</div>
