--- a/frontend/src/app/core/components/coffee-day/coffee-day.component.html
+++ b/frontend/src/app/core/components/coffee-day/coffee-day.component.html
@@ -9,7 +9,7 @@
   <table mat-table [dataSource]="coffeeDatasource">
     <ng-container matColumnDef="date">
       <th mat-header-cell *matHeaderCellDef>Dia do café</th>
-      <td mat-cell *matCellDef="let row" (click)="openCoffeeDetails(row)">{{ row.coffeeDate }}</td>
+      <td mat-cell *matCellDef="let row" (click)="openCoffeeDetails(row)" class="cursor-pointer hover:bg-custom-pink">{{ row.coffeeDate }}</td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
