--- a/frontend/src/app/core/components/colaborator/edit-colaborator/edit-colaborator.component.html
+++ b/frontend/src/app/core/components/colaborator/edit-colaborator/edit-colaborator.component.html
@@ -5,7 +5,7 @@
   <div class="flex">
     <mat-form-field class="w-full">
       <mat-label>Nome do colaborador</mat-label>
-      <input id="name" formControlName="name" matInput required/>
+      <input id="name" formControlName="name" matInput required class="capitalize"/>
     </mat-form-field>
   </div>
   <div class="flex">
