--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: 'Radio Canada', sans-serif; }
 
 .toast-center-center {
   top: 50%;
