--- a/frontend/src/app/core/components/colaborator/view-colaborator/view-colaborator.component.html
+++ b/frontend/src/app/core/components/colaborator/view-colaborator/view-colaborator.component.html
@@ -1,18 +1,22 @@
-<mat-card class="p-10">
-  <div class="flex justify-between mb-4">
+<div class="w-full mt-10 px-10">
+  <div class="flex justify-between">
     <h1 class="text-2xl font-bold">Colaboradores</h1>
-    <button  class="mt-2 bg-custom-teal p-2 px-2 rounded-lg text-white font-medium" (click)="openNewColaborator()">
-      Adicionar colaborador
+    <button class="text-white font-medium bg-custom-teal h-10 w-52 rounded-md" (click)="openNewColaborator()">
+      Adicionar novo colaborador
     </button>
   </div>
+  </div>
+
+  <mat-card class="p-10">
   <table
     mat-table
     [dataSource]="dataSource"
     class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg w-full"
   >
+
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef>NOME</th>
-      <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+      <th mat-header-cell *matHeaderCellDef class="h-16">NOME</th>
+      <td mat-cell *matCellDef="let row" class="h-20 capitalize">{{ row.name }}</td>
     </ng-container>
 
     <ng-container matColumnDef="cpf">
@@ -21,8 +25,8 @@
     </ng-container>
 
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef>AÇÕES</th>
-      <td mat-cell *matCellDef="let row">
+      <th mat-header-cell *matHeaderCellDef class="">AÇÕES</th>
+      <td mat-cell *matCellDef="let row" class="flex gap-5 h-20">
         <button mat-icon-button color="primary" (click)="openEditColaborator(row)">
           <mat-icon>edit</mat-icon>
         </button>
@@ -31,6 +35,7 @@
         </button>
       </td>
     </ng-container>
+
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
