--- a/frontend/src/app/core/components/item-option/view-item/view-item.component.html
+++ b/frontend/src/app/core/components/item-option/view-item/view-item.component.html
@@ -1,10 +1,13 @@
-<mat-card class="p-10">
-  <div class="flex justify-between mb-4">
+<div class="w-full mt-10 px-10">
+  <div class="flex justify-between">
     <h1 class="text-2xl font-bold">Itens</h1>
-    <button  class="mt-2 bg-custom-teal p-2 px-2 rounded-lg text-white font-medium" (click)="openNewItemOption()">
+    <button class="text-white font-medium bg-custom-teal h-10 w-52 rounded-md" (click)="openNewItemOption()">
       Adicionar novo item
     </button>
   </div>
+  </div>
+
+  <mat-card class="p-10">
   <table
     mat-table
     [dataSource]="dataSource"
@@ -12,17 +15,17 @@
   >
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef>ID</th>
-      <td mat-cell *matCellDef="let row">{{ row.id }}</td>
+      <td mat-cell *matCellDef="let row" class="h-20">{{ row.id }}</td>
     </ng-container>
 
     <ng-container matColumnDef="item">
       <th mat-header-cell *matHeaderCellDef>Item</th>
-      <td mat-cell *matCellDef="let row">{{ row.item }}</td>
+      <td mat-cell *matCellDef="let row" class="capitalize">{{ row.item }}</td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>AÇÕES</th>
-      <td mat-cell *matCellDef="let row">
+      <td mat-cell *matCellDef="let row" class="flex gap-5 h-20">
         <button mat-icon-button color="primary" (click)="openEditItemOption(row)">
           <mat-icon>edit</mat-icon>
         </button>
