--- a/frontend/src/app/core/components/home/home.component.html
+++ b/frontend/src/app/core/components/home/home.component.html
@@ -1,7 +1,7 @@
 <section>
   <img
     class="coffee-img"
-    src="https://media.canva.com/1/image-resize/1/1380_985_100_PNG_F/czM6Ly9tZWRpYS1wcml2YXRlLmNhbnZhLmNvbS9KZGN6by9NQUYwdmZKZGN6by8xL3AucG5n?osig=AAAAAAAAAAAAAAAAAAAAANtDIyMbu7HQQUo8b0wWz7__uZ3YUSYifOrAaIlB99S-&exp=1700533792&x-canva-quality=screen_2x&csig=AAAAAAAAAAAAAAAAAAAAAEP0Lw02eHMvsb3do7A44j_zFhm-nhOYeMldSEJioRHc"
+    src="assets/coffeechat.png"
     alt="Pessoas conversando e tomando um café"
   />
 
